--- a/customer.html
+++ b/customer.html
@@ -1,202 +1,207 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Business promotion - Customer</title>
-</head>
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Business promotion - Customer</title>
+  </head>
 
-<body>
-  <header>
-    <nav>
-      <a href="./index.html">
-        <img src="./images/customer/logo.svg" alt="logo" width="40" height="36">
-        Product
-      </a>
+  <body>
+    <header>
+      <nav>
+        <a href="./index.html">
+          <img src="./images/customer/logo.svg" alt="logo" width="40" height="36">
+          Product
+        </a>
+        <ul>
+          <li><a href="./index.html">Product</a></li>
+          <li><a href="./price.html">Pricing</a></li>
+          <li><a href="./customer.html">Customers</a></li>
+          <li><a href="">Resources</a></li>
+        </ul>
+      </nav>
       <ul>
-        <li><a href="./index.html">Product</a></li>
-        <li><a href="">Pricing</a></li>
-        <li><a href="./customer.html">Customers</a></li>
-        <li><a href="">Resources</a></li>
+        <li><button type="button">Sign In</button></li>
+        <li><button type="button">Sign Up</button></li>
       </ul>
-    </nav>
-    <ul>
-      <li><button type="button">Sign In</button></li>
-      <li><button type="button">Sign Up</button></li>
-    </ul>
-  </header>
+    </header>
 
-  <main>
+    <main>
 
-    <!-- hero section  -->
-    <section>
-      <h1>Our Clients</h1>
-      <ul>
-        <li>
-          <a href="https://www.airbnb.com.ua/">
-            <img
-              src="./images/customer/airbnb-logo.svg"
-              alt="logo airbnb"
-              width="159"
-              height="50"
-            />
-          </a>
-        </li>
-        <li>
-          <a href="https://www.google.com.ua/">
-            <img
-              src="./images/customer/google-logo.svg"
-              alt="logo google"
-              width="146"
-              height="50"
-            />
-          </a>
-        </li>
-        <li>
-          <a href="https://www.microsoft.com/">
-            <img
-              src="./images/customer/microsoft-logo.svg"
-              alt="logo microsoft"
-              width="213"
-              height="44"
-            />
-          </a>
-        </li>
-        <li>
-          <a href="https://www.fedex.com/">
-            <img
-              src="./images/customer/fedEx-logo.svg"
-              alt="logo fedEx"
-              width="140"
-              height="42"
-            />
-          </a>
-        </li>
-      </ul>
-
-    <!-- choose product  -->
-    <section>
-      <h2>Why Choose Product?</h2>
-      <ul>
-        <li>
-          <img
-            src="./images/customer/icon-1-1.svg"
-            alt="icon 1-1"
-            width="51"
-            height="50"
-          />
-          <h3>Special Business</h3>
-          <p>
-            Product helps you see how many more days you need to work to reach your financial goal for the month and year.
-          </p>
-        </li>
-        <li>
-          <img
-            src="./images/customer/icon-1-2.svg"
-            alt="icon 1-2"
-            width="50"
-            height="50"
-          />
-          <h3>Instant Result</h3>
-          <p>
-            Product helps you see how many more days you need to work to reach your financial goal for the month and year.
-          </p>
-        </li>
-        <li>
-          <img
-            src="./images/customer/icon-1-3.svg"
-            alt="icon 1-3"
-            width="50"
-            height="50"
-          />
-          <h3>Fastest way to organize</h3>
-          <p>
-            Product helps you see how many more days you need to work to reach your financial goal for the month and year
-          </p>
-        </li>
-      </ul>
-    </section>
-
-    <!-- product work-->
-    <section>
-      <h2>How Product Work?</h2>
-      <ul>
-        <li>
-          <img
-            src="./images/customer/mac1.png"
-            alt="laptop 1"
-            width="500"
-            height="280"
-          />
-          <p>STEP 1</p>
-          <h3>Apply for a product</h3>
-          <p>Completing our easy step-by-step application form gives you access to multiple business with multiple products. We analyse your business through our proprietary credit analysis technology</p>
-        </li>
-        <li>
-          <img
-            src="./images/customer/mac2.png"
-            alt="laptop 2"
-            width="500"
-            height="280"
-          />
-          <p>STEP 2</p>
-          <h3>Pay fully refundable</h3>
-          <p>Product will contactting you instantly to receive payment of the Application Fee. if no offer of product is available, your fee will be fully refunded.</p>
-        </li>
-        <li>
-          <img
-            src="./images/customer/mac3.png"
-            alt="laptop 3"
-            width="500"
-            height="280"
-          />
-          <p>STEP 3</p>
-          <h3>Completion</h3>
-          <p>Product will continue to liase between borrower and manager to procees and complete a quick and efficient settlement</p>
-        </li>
-      </ul>
-      <button type="button">Get in touch with us</button>
-    </section>
-
-    <!-- join thousand of other-->
-    <section>
-      <h2>Join thousand of other who have already received offers</h2>
-      <ul>
-        <li>
-          <img
-            src="./images/customer/icon-2-1.svg"
-            alt="icon 2-1"
-            width="150"
-            height="150"
-          />
-          <h3>Business</h3>
-          <ul>
-            <li>Cash Flow</li>
-            <li>Asset Backed</li>
-            <li>Receivables Finance</li>
-            <li>Find the best business product</li>
-          </ul>
-        </li>
-        <li>
-          <img
-            src="./images/customer/icon-2-2.svg"
-            alt="icon 2-2"
-            width="150"
-            height="150"
-          />
-          <h3>Enterprise</h3>
-          <ul>
-            <li>Site Acquisition</li>
-            <li>Bridge</li>
-            <li>Development Financing</li>
-            <li>Find the best business product</li>
-          </ul>
-        </li>
-      </ul>
-    </section>
-
-    <!-- join -->
+      <!-- hero section  -->
       <section>
+        <h1>Our Clients</h1>
+        <ul>
+          <li>
+            <a href="https://www.airbnb.com.ua/">
+              <img
+                src="./images/customer/airbnb-logo.svg"
+                alt="logo airbnb"
+                width="159"
+                height="50"
+              />
+            </a>
+          </li>
+          <li>
+            <a href="https://www.google.com.ua/">
+              <img
+                src="./images/customer/google-logo.svg"
+                alt="logo google"
+                width="146"
+                height="50"
+              />
+            </a>
+          </li>
+          <li>
+            <a href="https://www.microsoft.com/">
+              <img
+                src="./images/customer/microsoft-logo.svg"
+                alt="logo microsoft"
+                width="213"
+                height="44"
+              />
+            </a>
+          </li>
+          <li>
+            <a href="https://www.fedex.com/">
+              <img
+                src="./images/customer/fedEx-logo.svg"
+                alt="logo fedEx"
+                width="140"
+                height="42"
+              />
+            </a>
+          </li>
+        </ul>
+      </section>
+
+      <!-- choose product  -->
+      <section>
+        <h2>Why Choose Product?</h2>
+        <ul>
+          <li>
+            <img
+              src="./images/customer/icon-1-1.svg"
+              alt="icon 1-1"
+              width="51"
+              height="50"
+            />
+            <h3>Special Business</h3>
+            <p>
+              Product helps you see how many more days you need to work to reach your financial goal for the month and year.
+            </p>
+          </li>
+          <li>
+            <img
+              src="./images/customer/icon-1-2.svg"
+              alt="icon 1-2"
+              width="50"
+              height="50"
+            />
+            <h3>Instant Result</h3>
+            <p>
+              Product helps you see how many more days you need to work to reach your financial goal for the month and year.
+            </p>
+          </li>
+          <li>
+            <img
+              src="./images/customer/icon-1-3.svg"
+              alt="icon 1-3"
+              width="50"
+              height="50"
+            />
+            <h3>Fastest way to organize</h3>
+            <p>
+              Product helps you see how many more days you need to work to reach your financial goal for the month and year
+            </p>
+          </li>
+        </ul>
+      </section>
+
+      <!-- product work-->
+      <section>
+        <h2>How Product Work?</h2>
+        <ul>
+          <li>
+            <img
+              src="./images/customer/mac1.png"
+              alt="laptop 1"
+              width="500"
+              height="280"
+            />
+            <p>STEP 1</p>
+            <h3>Apply for a product</h3>
+            <p>Completing our easy step-by-step application form gives you access to multiple business with multiple products. We analyse your business through our proprietary credit analysis technology</p>
+          </li>
+          <li>
+            <img
+              src="./images/customer/mac2.png"
+              alt="laptop 2"
+              width="500"
+              height="280"
+            />
+            <p>STEP 2</p>
+            <h3>Pay fully refundable</h3>
+            <p>Product will contactting you instantly to receive payment of the Application Fee. if no offer of product is available, your fee will be fully refunded.</p>
+          </li>
+          <li>
+            <img
+              src="./images/customer/mac3.png"
+              alt="laptop 3"
+              width="500"
+              height="280"
+            />
+            <p>STEP 3</p>
+            <h3>Completion</h3>
+            <p>Product will continue to liase between borrower and manager to procees and complete a quick and efficient settlement</p>
+          </li>
+        </ul>
+        <button type="button">Get in touch with us</button>
+      </section>
+
+      <!-- join thousand of other-->
+      <section>
+        <h2>Join thousand of other who have already received offers</h2>
+        <ul>
+          <li>
+            <img
+              src="./images/customer/icon-2-1.svg"
+              alt="icon 2-1"
+              width="150"
+              height="150"
+            />
+            <h3>Business</h3>
+            <ul>
+              <li>Cash Flow</li>
+              <li>Asset Backed</li>
+              <li>Receivables Finance</li>
+              <li>Find the best business product</li>
+            </ul>
+          </li>
+          <li>
+            <img
+              src="./images/customer/icon-2-2.svg"
+              alt="icon 2-2"
+              width="150"
+              height="150"
+            />
+            <h3>Enterprise</h3>
+            <ul>
+              <li>Site Acquisition</li>
+              <li>Bridge</li>
+              <li>Development Financing</li>
+              <li>Find the best business product</li>
+            </ul>
+          </li>
+        </ul>
+      </section>
+
+      <!-- join -->
+      <section>
+
+        <!-- header for SEO -->
+        <h2>Join 100 Compannies...</h2>
+
         <p>
           Join 100 Compannies who boost their business with Product
         </p>
@@ -219,71 +224,70 @@
             height="29"
           />
           Product
-        </a>
-        <ul>
-          <li>
-            <a href="https://www.instagram.com/">
-              <img
-                src="./images/customer/icon-instagram.svg"
-                alt="icon instagram"
-                width="40"
-                height="40"
-              />
-            </a>
-          </li>
-          <li>
-            <a href="https://www.facebook.com/">
-              <img
-                src="./images/customer/icon-facebook.svg"
-                alt="icon facebook"
-                width="40"
-                height="40"
-              />
-            </a>
-          </li>
-          <li>
-            <a href="https://twitter.com/">
-              <img
-                src="./images/customer/icon-twitter.svg"
-                alt="icon twitter"
-                width="40"
-                height="40"
-              />
-            </a>
-          </li>
-        </ul>
+      </a>
+      <ul>
+        <li>
+          <a href="https://www.instagram.com/">
+            <img
+              src="./images/customer/icon-instagram.svg"
+              alt="icon instagram"
+              width="40"
+              height="40"
+            />
+          </a>
+        </li>
+        <li>
+          <a href="https://www.facebook.com/">
+            <img
+              src="./images/customer/icon-facebook.svg"
+              alt="icon facebook"
+              width="40"
+              height="40"
+            />
+          </a>
+        </li>
+        <li>
+          <a href="https://twitter.com/">
+            <img
+              src="./images/customer/icon-twitter.svg"
+              alt="icon twitter"
+              width="40"
+              height="40"
+            />
+          </a>
+        </li>
+      </ul>
 
-        <ul>
-          <li>Resource</li>
-          <li><a href="">About Us</a></li>
-          <li><a href="">Blog</a></li>
-          <li><a href="">Contact</a></li>
-          <li><a href="">FAQ</a></li>
-        </ul>
+      <ul>
+        <li>Resource</li>
+        <li><a href="">About Us</a></li>
+        <li><a href="">Blog</a></li>
+        <li><a href="">Contact</a></li>
+        <li><a href="">FAQ</a></li>
+      </ul>
 
-        <ul>
-          <li>Legal Stuff</li>
-          <li><a href="">Disclaimer</a></li>
-          <li><a href="">Financing</a></li>
-          <li><a href="">Privacy Policy</a></li>
-          <li><a href="">Terms of Service</a></li>
-        </ul>
+      <ul>
+        <li>Legal Stuff</li>
+        <li><a href="">Disclaimer</a></li>
+        <li><a href="">Financing</a></li>
+        <li><a href="">Privacy Policy</a></li>
+        <li><a href="">Terms of Service</a></li>
+      </ul>
 
-        <!-- list_3-???????? -->
-        <ul>
-          <li>
-            knowing you're always on the best energy deal. 
-          </li>
-          <li>
-            <input type="text">
-          </li>
-          <li>
-            <button type="button">Sign up Now</button>
-          </li>
-        </ul>
-        <p>Made With Love By Figmaland All Right Reserved </p>
+      <!-- list_3-???????? -->
+      <ul>
+        <li>
+          knowing you're always on the best energy deal. 
+        </li>
+        <li>
+          <input type="text">
+        </li>
+        <li>
+          <button type="button">Sign up Now</button>
+        </li>
+      </ul>
+      <p>Made With Love By Figmaland All Right Reserved </p>
     </footer>
-  </main>
 
-</body>
+  </body>
 </html>
