--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </a>
         <ul>
           <li><a href="./index.html">Product</a></li>
-          <li><a href="">Pricing</a></li>
+          <li><a href="./price.html">Pricing</a></li>
           <li><a href="./customer.html">Customers</a></li>
           <li><a href="">Resources</a></li>
         </ul>
@@ -198,7 +198,7 @@
 
       <!-- contact our expert  -->
       <section>
-        <h3>Quick & Easy Process</h3>
+        <h2>Quick & Easy Process</h2>
         <p>
           Do you require some help for your project: Conception workshop,
           prototyping, marketing strategy, landing page, Ux/UI?
@@ -248,7 +248,7 @@
 
       <!-- strategies  -->
       <section>
-        <h3>Contents Strategies</h3>
+        <h2>Contents Strategies</h2>
         <p>
           We focus on ergonomics and meeting you where you work. It's only a
           keystroke away.
@@ -262,7 +262,7 @@
               height="185"
             />
             <p>By Wahid Ari | 03 March 2019</p>
-            <h4>Increasing Prosperity With Positive Thinking</h4>
+            <h3>Increasing Prosperity With Positive Thinking</h3>
           </li>
           <li>
             <img
@@ -272,7 +272,7 @@
               height="185"
             />
             <p>By Wahid Ari | 03 March 2019</p>
-            <h4>Motivation Is The First Step To Success</h4>
+            <h3>Motivation Is The First Step To Success</h3>
           </li>
           <li>
             <img
@@ -282,18 +282,18 @@
               height="185"
             />
             <p>By Wahid Ari | 03 March 2019</p>
-            <h4>Success Steps For Your Personal Or Business</h4>
+            <h3>Success Steps For Your Personal Or Business</h3>
           </li>
         </ul>
       </section>
 
       <!-- price  -->
       <section>
-        <h3>Price Table</h3>
+        <h2>Price Table</h2>
         <p>We offer competitive price</p>
         <ul>
           <li>
-            <h4>Free</h4>
+            <h3>Free</h3>
             <p>Brief price description</p>
 
             <!-- list_1-???????? -->
@@ -310,7 +310,7 @@
             <button type="button">Order Now</button>
           </li>
           <li>
-            <h4>Standard</h4>
+            <h3>Standard</h3>
             <p>Brief price description</p>
 
             <!-- list_1-???????? -->
@@ -327,7 +327,7 @@
             <button type="button">Order Now</button>
           </li>
           <li>
-            <h4>Premium</h4>
+            <h3>Premium</h3>
             <p>Brief price description</p>
 
             <!-- list_1-???????? -->
@@ -348,7 +348,7 @@
 
       <!-- reviews  -->
       <section>
-        <h3>What Clients Say</h3>
+        <h2>What Clients Say</h2>
         <p>Problems trying to resolve the conflict between the two major realms of Classical physics: Newtonian mechanics </p>
         <ul>
           <li>
@@ -429,6 +429,10 @@
 
       <!-- join -->
       <section>
+
+        <!-- header for SEO -->
+        <h2>Join 100 Compannies...</h2>
+
         <p>
           Join 100 Compannies who boost their business with Product
         </p>
@@ -521,5 +525,6 @@
         </ul>
         <p>Made With Love By Figmaland All Right Reserved </p>
     </footer>
+
   </body>
 </html>
